# study-packaging-python-project

./: LICENSE  README.md  pyproject.toml
.github/workflow/: release.yml
.github/workflows/: release.yml
src/chomu-functional/: example.py
src/chomu_functional/: __init__.py
