[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chomu-functional"]

[project]
name = "study-packaging-python-project"
version = "0.0.2"
authors = [{ name = "Lee ChanHaeng", email = "2chanhaeng@gmail.com" }]
description = "Python packaging study and practice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/2chanhaeng/study-packaging-python-project"
Issues = "https://github.com/2chanhaeng/study-packaging-python-project/issues"
